complete thinkful portfolio task

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pete Thinkful</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-  <link href="style.css" rel="stylesheet" type="text/css">
+  <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
 
   <header>
+    <h1>Pete Thinkful | Artist</h1>
     <nav>
       <ul>
         <li><a href="#about">About</a></li>
@@ -23,18 +24,17 @@
   </header>
 
   <main>
+
     <section id="about">
       <figure>
         <img class="image-circle" src="images/pete-thinkful.png" alt="Pete Thinkful">
       </figure>
-
-      <h1>About</h1>
+      <h2>About</h2>
       <p>
         Hi! I'm Pete Thinkful, an artist living in Denver, Colorado.
         My interests include producing abstract art, creating street graffiti art, and connecting with like-minded
         artists.
       </p>
-
       <h2>Pete's Background</h2>
       <p>
         After graduating college, I became an art teacher and worked with both beginners and professionals.
@@ -46,7 +46,7 @@
     <hr>
 
     <section id="portfolio">
-      <h1>Portfolio</h1>
+      <h2>Portfolio</h2>
 
       <article>
         <img src="images/abstract-red.png" alt="Abstract Red">
@@ -71,15 +71,17 @@
     <hr>
 
     <section id="contact">
-      <h1>Contact</h1>
+      <h2>Contact</h2>
       <p>I'd love to hear from you! Please feel free to <a href="mailto:pete@example.com">contact</a> or follow me on <a
           href="#">LinkedIn</a>, <a href="#">Instagram</a>, or <a href="#">Pinterest</a>.</p>
     </section>
+
   </main>
 
   <footer>
     <p>© Pete Thinkful. All rights reserved.</p>
   </footer>
+
 </body>
 
 </html>
