--- a/index.html
+++ b/index.html
@@ -26,15 +26,28 @@
   <main>
 
     <section id="about">
+      <h2>About</h2>
+      <h3>Hi! I'm Pete Thinkful</h3>
       <figure>
         <img class="image-circle" src="images/pete-thinkful.png" alt="Pete Thinkful">
       </figure>
-      <h2>About</h2>
+
       <p>
-        Hi! I'm Pete Thinkful, an artist living in Denver, Colorado.
-        My interests include producing abstract art, creating street graffiti art, and connecting with like-minded
-        artists.
+        I'm an artist living in Denver, Colorado.
+        <br>
+        <br>
+        As an artist, I'm interested in:
+        <br>
+
+      <ul>
+        <li>Producing abstract art</li>
+        <li>Creating street graffiti art</li>
+        <li>Connecting with like-minded artists</li>
+      </ul>
+      <br>
+      Please feel free to take a look at my website and feel free to <a href=#contact>contact me</a>
       </p>
+
       <h2>Pete's Background</h2>
       <p>
         After graduating college, I became an art teacher and worked with both beginners and professionals.
@@ -72,8 +85,12 @@
 
     <section id="contact">
       <h2>Contact</h2>
-      <p>I'd love to hear from you! Please feel free to <a href="mailto:pete@example.com">contact</a> or follow me on <a
-          href="#">LinkedIn</a>, <a href="#">Instagram</a>, or <a href="#">Pinterest</a>.</p>
+      <p>I'd love to hear from you! Please feel free to contact or follow me on:
+      <ol>
+        <li><a href="#">LinkedIn</a></li>
+        <li><a href="#">Instagram</a></li>
+        <li><a href="#">Pinterest</a></li>
+      </ol>
     </section>
 
   </main>
