fix header position

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   </main>
 
   <footer>
-    <p>© Pete Thinkful. All rights reserved.</p>
+    © Pete Thinkful. All rights reserved.
   </footer>
 
 </body>
