--- a/index.html
+++ b/index.html
@@ -2,102 +2,98 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pete Thinkful</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-  <link href="style.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pete Thinkful</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
 
-  <header>
-    <h1>Pete Thinkful | Artist</h1>
-    <nav>
-      <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+    <header>
+        <h1>Pete Thinkful | Artist</h1>
+        <nav>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <main>
+    <main>
 
-    <section id="about">
-      <h2>About</h2>
-      <h3>Hi! I'm Pete Thinkful</h3>
-      <figure>
-        <img class="image-circle" src="images/pete-thinkful.png" alt="Pete Thinkful">
-      </figure>
+        <section id="about">
+            <h2>About</h2>
+            <h3>Hi! I'm Pete Thinkful</h3>
+            <figure>
+                <img class="image-circle" src="images/pete-thinkful.png" alt="Pete Thinkful">
+            </figure>
 
-      <p>
-        I'm an artist living in Denver, Colorado.
-        <br>
-        <br>
-        As an artist, I'm interested in:
-        <br>
+            <p>
+                I'm an artist living in Denver, Colorado. As an artist, I'm interested in:
+            </p>
+            <ul>
+                <li>Producing abstract art</li>
+                <li>Creating street graffiti art</li>
+                <li>Connecting with like-minded artists</li>
+            </ul>
+            <p>
+                Please feel free to take a look at my website and feel free to <a href="#contact">contact me</a>.
+            </p>
 
-      <ul>
-        <li>Producing abstract art</li>
-        <li>Creating street graffiti art</li>
-        <li>Connecting with like-minded artists</li>
-      </ul>
-      <br>
-      Please feel free to take a look at my website and feel free to <a href=#contact>contact me</a>
-      </p>
+            <h2>Pete's Background</h2>
+            <p>
+                After graduating college, I became an art teacher and worked with both beginners and professionals.
+                My works have been featured in major art galleries worldwide. If you’re looking to hire an artist or
+                seek a collaborator, reach out!
+            </p>
+        </section>
 
-      <h2>Pete's Background</h2>
-      <p>
-        After graduating college, I became an art teacher and worked with both beginners and professionals.
-        My works have been featured in major art galleries worldwide. If you’re looking to hire an artist or seek a
-        collaborator, reach out!
-      </p>
-    </section>
+        <hr>
 
-    <hr>
+        <section id="portfolio">
+            <h2>Portfolio</h2>
 
-    <section id="portfolio">
-      <h2>Portfolio</h2>
+            <article>
+                <h3>Abstract Red</h3> <!-- Changed to h3 for semantic hierarchy -->
+                <img src="images/abstract-red.png" alt="Abstract Red">
+                <p>Vaporware wayfarers heirloom neutra disrupt. Activated charcoal waistcoat scenester hell of.</p>
+            </article>
 
-      <article>
-        <img src="images/abstract-red.png" alt="Abstract Red">
-        <h2>Abstract Red</h2>
-        <p>Vaporware wayfarers heirloom neutra disrupt. Activated charcoal waistcoat scenester hell of.</p>
-      </article>
+            <article>
+                <h3>Spiral Zany</h3> <!-- Changed to h3 for semantic hierarchy -->
+                <img src="images/spiral-zany.png" alt="Spiral Zany">
+                <p>Sriracha portland taxidermy cronut messenger bag, vegan distillery. Vaporware kickstarter air
+                    plant mumblecore food truck.</p>
+            </article>
 
-      <article>
-        <img src="images/spiral-zany.png" alt="Spiral Zany">
-        <h2>Spiral Zany</h2>
-        <p>Sriracha portland taxidermy cronut messenger bag, vegan distillery. Vaporware kickstarter air plant
-          mumblecore food truck.</p>
-      </article>
+            <article>
+                <h3>Melted Rainbow</h3> <!-- Changed to h3 for semantic hierarchy -->
+                <img src="images/melted-rainbow.png" alt="Melted Rainbow">
+                <p>Edison bulb single-origin coffee snackwave, actually ennui locavore shabby chic forage.</p>
+            </article>
+        </section>
 
-      <article>
-        <img src="images/melted-rainbow.png" alt="Melted Rainbow">
-        <h2>Melted Rainbow</h2>
-        <p>Edison bulb single-origin coffee snackwave, actually ennui locavore shabby chic forage.</p>
-      </article>
-    </section>
+        <hr>
 
-    <hr>
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>I'd love to hear from you! Please feel free to contact or follow me on:</p>
+            <ol>
+                <li><a href="#">LinkedIn</a></li>
+                <li><a href="#">Instagram</a></li>
+                <li><a href="#">Pinterest</a></li>
+            </ol>
+        </section>
 
-    <section id="contact">
-      <h2>Contact</h2>
-      <p>I'd love to hear from you! Please feel free to contact or follow me on:
-      <ol>
-        <li><a href="#">LinkedIn</a></li>
-        <li><a href="#">Instagram</a></li>
-        <li><a href="#">Pinterest</a></li>
-      </ol>
-    </section>
+    </main>
 
-  </main>
-
-  <footer>
-    © Pete Thinkful. All rights reserved.
-  </footer>
+    <footer>
+        <p>© Pete Thinkful. All rights reserved.</p>
+    </footer>
 
 </body>
 
