--- a/index.html
+++ b/index.html
@@ -12,20 +12,21 @@
 
 <body>
 
-    <header>
-        <h1>Pete Thinkful | Artist</h1>
-        <nav>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+ <header>
+    <div>
+      <h1>Pete Thinkful | Artist</h1>
+      <nav>
+       <a href="#about">About</a>
+       <a href="#portfolio">Portfolio</a>
+       <a href="#contact">Contact</a>
+      </nav>
+    </div>
+</header>
 
     <main>
 
         <section id="about">
+          <div>
             <h2>About</h2>
             <h3>Hi! I'm Pete Thinkful</h3>
             <figure>
@@ -40,8 +41,7 @@
                 <li>Creating street graffiti art</li>
                 <li>Connecting with like-minded artists</li>
             </ul>
-            <p>
-                Please feel free to take a look at my website and feel free to <a href="#contact">contact me</a>.
+            <p>Please feel free to take a look at my website and feel free to<a href="#contact">contact me.</a>
             </p>
 
             <h2>Pete's Background</h2>
@@ -50,11 +50,13 @@
                 My works have been featured in major art galleries worldwide. If you’re looking to hire an artist or
                 seek a collaborator, reach out!
             </p>
+          </div>
         </section>
 
         <hr>
 
         <section id="portfolio">
+          <div>
             <h2>Portfolio</h2>
 
             <article>
@@ -75,11 +77,13 @@
                 <img src="images/melted-rainbow.png" alt="Melted Rainbow">
                 <p>Edison bulb single-origin coffee snackwave, actually ennui locavore shabby chic forage.</p>
             </article>
+          </div>
         </section>
 
         <hr>
 
         <section id="contact">
+          <div>
             <h2>Contact</h2>
             <p>I'd love to hear from you! Please feel free to contact or follow me on:</p>
             <ol>
@@ -87,12 +91,15 @@
                 <li><a href="#">Instagram</a></li>
                 <li><a href="#">Pinterest</a></li>
             </ol>
+            </div>
         </section>
 
     </main>
 
     <footer>
+      <div>
         <p>© Pete Thinkful. All rights reserved.</p>
+      </div>
     </footer>
 
 </body>
